--- a/src/components/Layout/Header.module.css
+++ b/src/components/Layout/Header.module.css
@@ -1,22 +1,36 @@
-.header {
+
+.headerHome {
   position: absolute;
   top: 24px;
   left: 50%;
   transform: translateX(-50%);
   width: 100%;
   max-width: 1400px;
+
   display: flex;
   justify-content: space-between;
   align-items: center;
+
   background: transparent;
-  z-index: 10;
   color: #fff;
   border-bottom: 1px solid #FBFBFB66;
-  padding: 20px ;
+
+  padding: 20px;
+  z-index: 10;
 }
 
-
-
+.headerDefault {
+  width: 100%;
+  height: 90px;
+  background: var(--blue);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 40px;
+  color: #fff;
+  position: relative;
+  z-index: 10;
+}
 .logo {
   font-weight: 500;
   font-size: 20px;
