--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -18,7 +18,9 @@
   padding: 20px;
   z-index: 10;
 }
-
+.headerHome .nav {
+  transform: translateX(200px); 
+}
 .headerDefault {
   width: 100%;
   height: 90px;
@@ -40,7 +42,7 @@
 .nav {
   display: flex;
   gap: 24px;
-  margin-left: 400px;
+ justify-content: center;
 }
 
 .link {
